# hamdf

./: .gitignore  DEPLOY_RAILWAY.md  Dockerfile  Login_to_GitHub_test.py  README.md  diagnose_llm_config.py  pyproject.toml  railway.json  requirements.txt  test_cerebras.py  test_deployment.py  test_openai_cerebras.py  test_simple.py
outputs/: deployment_launch_guide.md  development_environment_guide.md  mvp_development_guide.md  planning_setup_guide.md  post_launch_support_guide.md  product_requirements_document.md  quality_review_report.md  technical_architecture_guide.md  technology_stack_recommendations.md  testing_quality_guide.md
src/prd_generator/: crew.py  main.py
src/prd_generator/config/: agents.yaml  tasks.yaml
src/prd_generator/tools/: cerebras_llm.py  prd_tools.py
